--- a/src/styles.css
+++ b/src/styles.css
@@ -88,12 +88,14 @@ a {
     }
 
     h2 {
-        font-size: 24px
+        font-size: 24px;
+        margin-bottom: 50px;
     }
 
     h4 {
         font-size: 20px;
-        margin: 20px 0;
+        margin: 0;
+        margin-bottom: 20px;
     }
 
     p {
@@ -152,9 +154,13 @@ a {
     }
 }
 
-@media (max-width: 391px) {
+@media (max-width: 550px) {
     .grid4 {
         display: block;
+    }
+
+    .grid4__art {
+        margin-bottom: 20px;
     }
 }
 
@@ -292,9 +298,9 @@ border-radius: 50%;
 margin-bottom: 40px;
 }
 
-@media (max-width: 391px) {
+@media (max-width: 400px) {
     .fourth__img {
-        width: 150px;
+        width: 100%;
     }
 }
 
